# PRISMV9

./: .gitignore  00_CONDENSED_PROTOCOL_v5.md  BOOTSTRAP.md  CLAUDE.md  CLAUDE_MEMORY.json  CONDENSED_PROTOCOL_v8.md  CURRENT_STATE.json  DEVELOPMENT_PROMPT_v14.md  DEVELOPMENT_PROMPT_v15.md  END_SESSION.bat  INSTALL_CLAUDE_FLOW.bat  MASTER_INVENTORY.json  MEGA_ROADMAP_AUDIT_v1.md  OTHER_CHAT.ini  PATH_CONFIG.json  PRISM_BATTLE_READY_PROMPT_v10_4.md  PRISM_MCP_UNIFIED_PLATFORM_ROADMAP.md  PRISM_MEGA_ROADMAP_v2.md  PROJECT_INDEX.json  PROJECT_INSTRUCTIONS_v10_4.md  ROADMAP_QUEUE.json  SESSION_STATE.json  START_SESSION.bat  analyze_skills.ps1  apply-audit-fixes.ps1  apply_r1.ps1  apply_r10.ps1  apply_r2.ps1  apply_r9.ps1  audit_all_phases.ps1  audit_companion_deep.ps1  check_da.ps1  check_headers.ps1  check_knowledge_refs.ps1  check_map.ps1  check_r6.ps1  check_remaining.ps1  check_spec_branches.ps1  check_status.ps1  claude.bat  (+28 more)
.claude/: memory.db  settings.json  statusline.mjs  statusline.sh
.claude-flow/: .trend-cache.json  CAPABILITIES.md  agents.json  config.yaml  daemon-state.json
.claude-memory/: prism_memory.json
cad-engine/: .gitignore  pyproject.toml
cad-engine/reference_parts/: bearing_block.step  bracket.step  bushing.step  cube.step  cylinder.step  flanged_plate.step  gusset.step  manifold_block.step  shaft_collar.step  spacer.step
cad-engine/src/: __init__.py  bridge.py  cad_export.py  cad_kernel.py  geo_validator.py  reference_parts.py
cad-engine/tests/: conftest.py  test_defect_detection.py  test_reference_parts.py  test_roundtrip.py
(+9161 files in other folders)
