[project]
name = "prism-cad-engine"
version = "0.1.0"
description = "PRISM CNC Manufacturing Intelligence — Python CAD Engine (CadQuery wrapper)"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "cadquery==2.7.0",
    "build123d==0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
